objects/Request_Runner__c.object
<CustomObject>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Runners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Email__c</fullName>
        <label>Assigned To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CR_Lead_Email__c</fullName>
        <label>CR Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <label>Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>Request Runners</relationshipLabel>
        <relationshipName>Request_Runners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_by_SF_Team_Member__c</fullName>
        <formula>CreatedBy.SF_Team_Member__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by SF Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalate_To__c</fullName>
        <label>Escalate To</label>
        <picklist>
            <picklistValues>
                <fullName>Raised Hand Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes DEPRECATED DO NOT USE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolve_Notes__c</fullName>
        <label>Resolve Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Request Runner</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Request Runner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Runners</pluralLabel>
    <recordTypes>
        <fullName>Assign</fullName>
        <active>true</active>
        <label>Assign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Comment</fullName>
        <active>true</active>
        <label>Comment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Escalate</fullName>
        <active>true</active>
        <label>Escalate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resolve</fullName>
        <active>true</active>
        <label>Resolve</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Salesforce_Team_Member</fullName>
        <active>true</active>
        <description>Prevents someone who isn&apos;t on the Salesforce team from assigning a CR.</description>
        <errorConditionFormula>AND($User.SF_Team_Member__c != TRUE, RecordType.DeveloperName = &quot;Assign&quot;)</errorConditionFormula>
        <errorMessage>Only members of the Salesforce team are able to assign Change Requests. Please use the Comment button instead.</errorMessage>
    </validationRules>
</CustomObject>